fixed rename overflow

--- a/styles/template.css
+++ b/styles/template.css
@@ -32,6 +32,7 @@
   font-size: large;
   font-weight: bolder;
   color: black;
+  overflow: scroll;
 }
 
 .template-button {
